<resources>
    <string name="app_name">Sodium Controller</string>
    <string name="title_activity_refereces">Refereces</string>
    <string name="restrictionChoose">Elija su nivel de restricción</string>
    <string name="low_restriction">Restricción leve</string>
    <string name="mid_restriction">Restricción moderada</string>
    <string name="high_restriction">Restricción severa</string>
    <string name="text_button_welcome">Elegir</string>
    <string name="info_text">¿No sabes que nivel elegir?</string>
    <string name="info_click">Consulta aquí</string>
    <string name="low_restriction_info">Restricción leve: entre 900 - 2100mg de consumo de Sodio al día.</string>
    <string name="mid_restriction_info">Restricción moderada: entre 500 - 900mg de consumo de Sodio al día.</string>
    <string name="high_restriction_info">Restricción severa: menos de 500 mg de consumo de Sodio al día.</string>
    <string name="tab_home">Inicio</string>
    <string name="tab_food">Alimentos</string>
    <string name="tab_history">Historial</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="foodname_card">Pechuga de pollo asada</string>
    <string name="sodiumcontent_card">20mg de sodio</string>
    <string name="bar_title">Cantidad de sodio</string>
    <string name="begin_bar_indicator">0mg</string>
    <string name="end_bar_indicator">200mg</string>
    <string name="foodquantity_card">100gramos</string>
    <string name="textview_food_list">Alimentos consumidos hoy</string>
    <string name="hint_gramsquantity">Cantidad en gramos</string>
    <string name="text_button_addfood">Agregar</string>
</resources>
