<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.jorger9.sodiumcontroller.view.ShowInfoActivity"
    >

    <include layout="@layout/actionbar_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/low_restriction_info"
                android:theme="@style/TextViewInfo"
                android:layout_marginTop="@dimen/marginTop_textView_info"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mid_restriction_info"
                android:theme="@style/TextViewInfo"
                android:layout_marginTop="@dimen/marginTop_textView_info"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/high_restriction_info"
                android:theme="@style/TextViewInfo"
                android:layout_marginTop="@dimen/marginTop_textView_info"
                />
        </LinearLayout>

    </ScrollView>



</android.support.design.widget.CoordinatorLayout>
