<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/foodCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview_food"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_cardview_food"
        android:orientation="horizontal"
        android:weightSum="1"
        android:paddingLeft="@dimen/paddingleft_cardview"
        android:paddingTop="@dimen/activity_vertical_margin"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight=".3"
            >

            <TextView
                android:id="@+id/foodlistNameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foodname_card"
                android:textSize="@dimen/textsize_cardviewfoodtitle"
                android:textColor="@color/textcolor_textviewcardtitle"
                />

            <TextView
                android:id="@+id/foodlistquantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foodquantity_card"
                android:textSize="@dimen/textsize_cardviewfoodtextview"
                android:textColor="@android:color/darker_gray"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:orientation="vertical"
            android:weightSum="1"
            >

            <TextView
                android:id="@+id/foodlistsodiumContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sodiumcontent_card"
                android:layout_weight=".5"
                android:gravity="center"
                android:textSize="@dimen/textsize_cardviewfoodtextview"
                android:textColor="@android:color/darker_gray"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/plus_grey"
                    android:scaleType="centerCrop"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/heght_divider"
        android:background="@android:color/darker_gray"
        />
</android.support.v7.widget.CardView>