<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.jorger9.sodiumcontroller.view.fragment.HomeFragment">

    <include layout="@layout/actionbar_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:weightSum="1"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"

            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            >
            <TextView
                android:id="@+id/textview_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bar_title"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_margin="@dimen/activity_vertical_margin"
                />
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_below="@id/textview_home"
                />
            <TextView
                android:id="@+id/lowerlimit_barindicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/begin_bar_indicator"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/progress_bar"
                />
            <TextView
                android:id="@+id/upperlimit_barindicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_bar_indicator"
                android:layout_alignParentRight="true"
                android:layout_below="@id/progress_bar"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.4"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_food_list"
                    android:textSize="@dimen/info_text_size"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    />
                <TextView
                    android:id="@+id/totalsodium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="200mg de sodio"
                    android:textSize="@dimen/info_text_size"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    />

            </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/dailyfoodListRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />

        </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:onClick="goToFoodListActivity"
        app:srcCompat="@drawable/plus"
        />

</android.support.design.widget.CoordinatorLayout>

